--- a/client/app/app.css
+++ b/client/app/app.css
@@ -654,6 +654,13 @@ For mailchimp sign-up - not needed in main app
     margin-left: 15px;
   }
 
+/* ==========================================================================
+ Room page margin spacing for mobile
+ ========================================================================== */
+.roomRoommates {
+  margin-bottom: 20px;
+}
+
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
@@ -678,7 +685,6 @@ For mailchimp sign-up - not needed in main app
 .navbar-wrapper .navbar .container {
   width: auto;
 }
-
 
 /* MARKETING CONTENT
 -------------------------------------------------- */
@@ -771,7 +777,6 @@ For mailchimp sign-up - not needed in main app
   .input-post textarea {
     margin-left: 30px;
   }
-
 }
 
 @media only screen and (min-width : 992px) {
