--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -8,10 +8,10 @@
         <img src="assets/images/footer-logo.svg" alt="">
         <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
-      <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 link">
+      <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
         <a href="#">Terms and Conditions</a> |
         <a href="#">Privacy policy </a> |
-        <a href="#">Contact us</a>
+        <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a>
       </div>
     </div>
 
