--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -4,14 +4,14 @@
       <a href="/">
         <img src="../../../assets/images/webname.svg" alt="campusly" >
       </a>
-      <p class="brand-text" ng-hide="isLoggedIn()">secure off-campus community</p>
+      <p class="brand-text">secure off-campus community</p>
     </div>
 
     <div class="right-content" ng-show="isLoggedIn()">
-      <p class="greetings">Hello <strong>{{getCurrentUser().firstname}}</strong></p>
       <img class="img-circle profile-image" ng-if="getCurrentUser().profileImage" ng-src="/api/images{{getCurrentUser().profileImage}}">
-      <i ng-if="!getCurrentUser().profileImage" class="fa fa-user" style="font-size:30px"></i>
-      <a class='bubble' ui-sref-active="active" ui-sref="logout"><i class="fa fa-sign-out"></i></a>
+      <i ng-if="!getCurrentUser().profileImage" class="fa fa-user fa-2x greetings" style="vertical-align: middle; "></i>
+      <p class="greetings">&nbsp;{{getCurrentUser().firstname}}</p>
+      <a class="bubble" ui-sref-active="active" ui-sref="logout"><i class="fa fa-sign-out"></i></a>
     </div>
 
     <div class="right-content" ng-show="!isLoggedIn()">
@@ -19,12 +19,6 @@
       <a ui-sref-active="active" ui-sref="signup" class="btn sign-up">Sign up for free</a>
     </div>
   </div>
-
-<!--   <div ng-hide="isMailconfirmed() || !isLoggedIn()">
-    <div class="container">
-      <span style="color:white; margin-top:18px; font-size:13px" >Your email address is not confirmed. Confirm <a href="/confirm">here</a></span>
-    </div>
-  </div> -->
 
 </header>
 
