--- a/client/components/layout/footer/footer.html
+++ b/client/components/layout/footer/footer.html
@@ -1,6 +1,6 @@
 <!--TODO implement footer-->
 
-<footer class="footer" ng-controller="FooterCtrl as footer">
+<footer class="footer">
   <div class="container">
 
     <div class="row">
@@ -9,8 +9,8 @@
         <span class="copyright">&copy; 2015 Rented, Inc.</span>
       </div>
       <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-        <a href="#">Terms and Conditions</a> |
-        <a href="#">Privacy policy </a> |
+        <a ui-sref="terms">Terms and Conditions</a> |
+        <a ui-sref="privacy">Privacy policy </a> |
         <a href="mailto:feedback@campusly.org?=Website%20Feedback" target="_top">Contact us</a>
       </div>
     </div>
