--- a/client/components/layout/footer/privacy.html
+++ b/client/components/layout/footer/privacy.html
@@ -1,15 +1,42 @@
-<div class="container">
+<div ng-include="'components/layout/navbar/navbar.html'"></div>
+<div ng-include="'components/layout/navbar/sub-navbar.html'" ng-if="isLoggedIn()"></div>
 
-  <div class="row">
+<div class="main-wrapper">
 
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+  <div class="container">
 
-      <h2>Privacy Policy</h2>
+    <div class="row">
 
-      <p></p>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+
+        <h2>Privacy Policy</h2>
+        <p>
+          UPDATED: OCTOBER 2014 <br><br>
+          1. INTRODUCTION. Rented, Inc., a Delaware corporation (“us,” “we,” or “Company”) is committed to respecting the privacy rights of its customers, visitors, and other users of the Company website and mobile application (the “Site”), including those wishing to rent a property as a tenant (“Tenant”) or as a property owner or manager to a Tenant (“Owner/Manager”). We created this Website Privacy Policy (“Privacy Policy”) to give you confidence as you visit and use the Site, and to demonstrate our commitment to fair information practices and the protection of privacy. This Privacy Policy is only applicable to the Site, and not to any other websites that you may be able to access from the Site, each of which may have data collection, storage, and use practices and policies that differ materially from this Privacy Policy. <br><br>
+          2. INFORMATION COLLECTION PRACTICES. <br>
+          2.1. TYPES OF INFORMATION COLLECTED. <br>
+          (a) TRAFFIC DATA COLLECTED. We automatically track and collect the following categories of information when you visit our Site: (1) IP addresses, (2) domain servers, (3) types of computers accessing the Site, and (4) types of web browsers used to access the Site (collectively “Traffic Data”). Traffic Data is anonymous information that does not personally identify you but is helpful for marketing purposes or for improving your experience on the Site.<br>
+          (b) PERSONAL INFORMATION COLLECTED. In order for you to access and purchase certain services offered on the Site, we require you to provide us with certain information that may personally identify you (“Personal Information”). Personal Information includes the following categories of information: (1) Contact Data, such as the name, mailing address, phone number, and email address of a Tenant or Owner/Manager; (2) Tenant Data, such as a Tenant’s Contact Data, prior address, move-in information, number of pets, occupation, household income level and proof of income, credit profile (supplemented by Experian as described in Company’s Terms of Use), reference contact information, and vehicle information and driver’s license number; and (3) Property Data, such as the physical address of an Owner/Manager’s rental property, property details and images, pricing terms, and move-in information. If you communicate with us by email; post messages to any of our chat groups, bulletin boards, or forums; or otherwise complete online forms, surveys, or contest entries, any information provided in such communication may be collected as Personal Information.<br>
+          (c) CHILDREN’S PRIVACY. We do not knowingly collect Personal Information from individuals under the age of 18 without obtaining verifiable consent from their parents. For more information about the Children’s Online Privacy Protection Act, visit the Federal Trade Commission’s website at www.ftc.gov. <br>
+          2.2. USES OF INFORMATION COLLECTED. 
+          (a) COMPANY USE OF INFORMATION. We use Contact Data to send you information about Company or our products or services, or promotional material from some of our partners, or to contact you when necessary.<br>
+          (b) SHARING OF PERSONAL INFORMATION. (1) Contact Data is shared with business partners as necessary to carry out the core business functions related to operation of the Site (such as hosting, billing, fulfillment, or data storage and security). Such business partners have agreed to uphold the same standards of security and confidentiality outlined in this Privacy Policy and will use your Contact Data only to carry out their specific business obligations to Company. (2) A Tenant’s Tenant Data is shared solely with the Owners/Managers of the specific properties on which Tenant makes offers through the Site. (3) Property Data is available to view for all visitors to and users of the Site.<br>
+          (c) USER CHOICE REGARDING COLLECTION, USE, AND DISTRIBUTION OF PERSONAL INFORMATION. You may choose not to provide us with any Personal Information by selecting the appropriate “opt-out” option each time we ask you for Personal Information. In such case, you can still access and use much of the Site. However, your user experience will diminish and your targeted results will not be nearly as accurate.<br>
+          (d) CALIFORNIA PRIVACY RIGHTS. California Civil Code Section § 1798.83 permits users of the Site that are California residents to request certain information regarding our disclosure of Personal Information to third parties for their direct marketing purposes. To make such a request, please send an email to info@rented.co or write us at: 936 Amphlett Ave. Suite B, San Mateo, CA 95123. At this time, however, we do not share any of your Personal Information with third parties for their direct marketing purposes.<br>
+          (e) CREDIT REPORT INFORMATION.  In order for us to provide services to you as a Tenant, you may authorize us to obtain information from your personal credit profile or other information from Experian, which we may share with potential Owner/Managers. We will only access and share an abbreviated version of Tenant’s credit report and VantageScore credit score with those Owners/Managers of the specific properties on which Tenant makes offers through the Site for renting/leasing purposes only.  The Fair Credit Reporting Act permits each Tenant to dispute inaccurate or incomplete information in Tenant’s credit file, although accurate information cannot be changed.  Other terms and conditions applicable to your personal credit profile are found in our Terms of Use.<br><br>
+          3. CONFIDENTIALITY AND SECURITY OF PERSONAL INFORMATION. Except as otherwise provided in this Privacy Policy, we will keep your Personal Information private and will not share it with third parties unless such disclosure is necessary to: (a) comply with a court order or other legal process; (b) protect our rights or property; or (c) enforce our Terms of Use. Your Personal Information is stored on secure servers that are not accessible by third parties. We provide you with the capability to transmit your Personal Information via secured and encrypted channels if you use a similarly equipped web browser. However, we cannot guarantee the security of your Personal Information transmitted to the Site, and we are not responsible for the circumvention of any privacy settings or security measures of the Site. Furthermore, you are responsible for keeping your account password confidential.<br>
+          3.1. USER ABILITY TO ACCESS, UPDATE, AND CORRECT PERSONAL INFORMATION. At any time, you may visit your personal profile in the mobile application or at rented.co (when the Site is active and running at full functionality) to: (a) review and update the Personal Information that we have already collected and/or (b) choose whether or not you wish us to send you information about Company or promotional material from some of our partners.<br>
+          3.2. LOST OR STOLEN INFORMATION. You must promptly notify us if your credit card, username, or password is lost, stolen, or used without permission. In such an event, we will remove that credit card number, username, or password from your account and update our records accordingly.<br>
+          3.3. PUBLIC INFORMATION. The Site contains links to other websites. We are not responsible for the privacy practices or the content of such websites. Please also understand that any information that is disclosed in chat rooms, forums, message boards, or news groups on the Site becomes public information. We have no control over its use and you should exercise caution when deciding to disclose your Personal Information.<br><br>
+          4. USE OF GOOGLE MAPS API: As the Site uses the Google Maps API, Google’s Privacy Policy, found at http://www.google.com/policies/privacy/, as such may be amended from time to time, is hereby incorporated by reference.<br><br>
+          5. UPDATES AND CHANGES TO PRIVACY POLICY. We reserve the right, at any time and without notice, to add to, change, update, or modify this Privacy Policy, simply by posting such change, update, or modification on the Site and without any other notice to you. Any such change, update, or modification will be effective immediately upon its posting on the Site.
+        </p>
+
+      </div>
 
     </div>
 
   </div>
 
 </div>
+
