Updated style for invite button and updated invited message

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -231,6 +231,14 @@ Posting input text type
   border-radius: 50px;
 }
 
+.input-post input[type="email"] {
+  height: 34px;
+  background: #ffffff;
+  color: rgba(0, 0, 0, 0.55);
+  text-align: left;
+  border-radius: 50px;
+}
+
 .input-post select{
   -webkit-appearance: none;
   -moz-appearance: none;
