--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1811,7 +1811,6 @@ Looking Details
 
 .my-profile .about-me .picture {
   width: 100%;
-  height: 250px;
   display: inline-block;
   float:left;
   padding-right: 20px;
@@ -1834,6 +1833,13 @@ Looking Details
   color: #000;
 }
 
+.looking-profile-img {
+  width: 100%;
+}
+
+.looking-grid-profile-img {
+  width: 29%;
+}
 
 /* My profile - roommates */
 
