--- a/client/components/layout/navbar/navbar.html
+++ b/client/components/layout/navbar/navbar.html
@@ -14,7 +14,7 @@
       <img class="img-circle profile-image" ng-if="getCurrentUser().profileImage" ng-src="/api/images{{getCurrentUser().profileImage}}">
       <i ng-if="!getCurrentUser().profileImage" class="fa fa-user fa-2x greetings" style="vertical-align: middle; "></i>
       <p class="greetings">&nbsp;{{getCurrentUser().firstname}}</p>
-      <a class="bubble" ui-sref-active="active" ui-sref="logout"><i class="fa fa-sign-out"></i></a>
+      <a class="new-bubble" ui-sref-active="active" ui-sref="logout"><i class="fa fa-sign-out"></i></a>
     </div>
 
     <div class="right-content" ng-show="!isLoggedIn()">
