--- a/client/app/app.css
+++ b/client/app/app.css
@@ -62,6 +62,7 @@ body{
   font-family: "ProximaNova";
   color: #333333;
   font-size: 1em;
+  -webkit-font-smoothing: subpixel-antialiased;
   /* background-color: #e8e8e8; */
 }
 
