Text rendering CSS fix for Safari font not being compressed

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -63,6 +63,7 @@ body{
   color: #333333;
   font-size: 1em;
   -webkit-font-smoothing: subpixel-antialiased;
+  text-rendering: optimizeLegibility;
   /* background-color: #e8e8e8; */
 }
 
