--- a/server/components/mail/password_reset/html.ejs
+++ b/server/components/mail/password_reset/html.ejs
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta httpss-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width"/>
   <title>Password reset</title>
 </head>
@@ -25,7 +25,7 @@
                         <tr>
 
                           <td class="six sub-columns">
-                            <img src="http://placehold.it/200x50">
+                            <img src="https://placehold.it/200x50">
                           </td>
                           <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
                             <span class="template-label">Password reset</span>
@@ -59,7 +59,7 @@
                         <td>
 
                           <h1>Hi, {{=name}}</h1>
-                          <img width="580" height="300" src="http://placehold.it/580x300">
+                          <img width="580" height="300" src="https://placehold.it/580x300">
 
                         </td>
                         <td class="expander"></td>
