--- a/server/components/mail/mail_confirmation/html.ejs
+++ b/server/components/mail/mail_confirmation/html.ejs
@@ -25,7 +25,7 @@
                         <tr>
 
                           <td class="six sub-columns">
-                            <img src="http://placehold.it/200x50">
+                            <!--<img src="http://placehold.it/200x50">-->
                           </td>
                           <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
                             <span class="template-label">Email confirmation</span>
@@ -59,7 +59,7 @@
                         <td>
 
                           <h1>Hi, {{=name}}</h1>
-                          <img width="580" height="300" src="/assets/images/r.jpg">
+                          <img width="580" height="300" src="http://i61.tinypic.com/2dj1e84.jpg" style="margin-top: 30px">
 
                         </td>
                         <td class="expander"></td>
