--- a/server/components/mail/password_reset/html.ejs
+++ b/server/components/mail/password_reset/html.ejs
@@ -25,7 +25,7 @@
                         <tr>
 
                           <td class="six sub-columns">
-                            <img src="https://placehold.it/200x50">
+                            <!--<img src="assets/images/yeoman.png">-->
                           </td>
                           <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
                             <span class="template-label">Password reset</span>
@@ -59,7 +59,7 @@
                         <td>
 
                           <h1>Hi, {{=name}}</h1>
-                          <img width="580" height="300" src="https://placehold.it/580x300">
+                          <img width="580" height="300" src="http://i61.tinypic.com/2dj1e84.jpg" style="margin-top: 30px">
 
                         </td>
                         <td class="expander"></td>
