Updated wording for email on sign-up and sign-in. Updated Reset password template

--- a/server/components/mail/password_reset/html.ejs
+++ b/server/components/mail/password_reset/html.ejs
@@ -3,47 +3,13 @@
 <head>
   <meta httpss-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width"/>
-  <title>Password reset</title>
+  <title>Campusly - Reset Password</title>
 </head>
 <body>
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
       <center>
-
-
-        <table class="row header">
-          <tr>
-            <td class="center" align="center">
-              <center>
-
-                <table class="container">
-                  <tr>
-                    <td class="wrapper last">
-
-                      <table class="twelve columns">
-                        <tr>
-
-                          <td class="six sub-columns">
-                            <!--<img src="assets/images/yeoman.png">-->
-                          </td>
-                          <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
-                            <span class="template-label">Password reset</span>
-                          </td>
-                          <td class="expander"></td>
-
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-              </center>
-            </td>
-          </tr>
-        </table>
-        <br>
 
         <table class="container">
           <tr>
@@ -56,10 +22,17 @@
 
                     <table class="twelve columns">
                       <tr>
+                        <td style="text-align: center">
+
+                          <img width="76" height="100" src="http://i61.tinypic.com/2dj1e84.jpg" class="center-block" style="margin-top: 30px;">
+
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
                         <td>
 
                           <h1>Hi, {{=name}}</h1>
-                          <img width="580" height="300" src="http://i61.tinypic.com/2dj1e84.jpg" style="margin-top: 30px">
 
                         </td>
                         <td class="expander"></td>
@@ -80,7 +53,7 @@
                         <td>
 
 
-                          <p>A request has been made to reset your password. You can change your password by clicking this button:</p>
+                          <p>Someone has requested a reset of your Campusly password. You can change your password by clicking this button:</p>
 
                         </td>
                         <td class="expander"></td>
@@ -170,7 +143,7 @@
                       <tr>
                         <td align="center">
                           <center>
-                            <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a></p>
+                            <p style="text-align:center;"><a href="https://campusly.org/terms">Terms</a> | <a href="https://campusly.org/privacy">Privacy</a></p>
                           </center>
                         </td>
                         <td class="expander"></td>
