--- a/server/components/mail/mail_confirmation/html.ejs
+++ b/server/components/mail/mail_confirmation/html.ejs
@@ -3,47 +3,13 @@
 <head>
   <meta https-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width"/>
-  <title>Activation</title>
+  <title>Campusly - Activation</title>
 </head>
 <body>
 <table class="body">
   <tr>
     <td class="center" align="center" valign="top">
       <center>
-
-
-        <table class="row header">
-          <tr>
-            <td class="center" align="center">
-              <center>
-
-                <table class="container">
-                  <tr>
-                    <td class="wrapper last">
-
-                      <table class="twelve columns">
-                        <tr>
-
-                          <td class="six sub-columns">
-                            <!--<img src="http://placehold.it/200x50">-->
-                          </td>
-                          <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
-                            <span class="template-label">Email confirmation</span>
-                          </td>
-                          <td class="expander"></td>
-
-                        </tr>
-                      </table>
-
-                    </td>
-                  </tr>
-                </table>
-
-              </center>
-            </td>
-          </tr>
-        </table>
-        <br>
 
         <table class="container">
           <tr>
@@ -58,8 +24,15 @@
                       <tr>
                         <td>
 
+                          <img width="76" height="100" src="http://i61.tinypic.com/2dj1e84.jpg" class="center-block" style="margin-top: 30px">
+
+                        </td>
+                        <td class="expander"></td>
+                      </tr>
+                      <tr>
+                        <td>
+
                           <h1>Hi, {{=name}}</h1>
-                          <img width="580" height="300" src="http://i61.tinypic.com/2dj1e84.jpg" style="margin-top: 30px">
 
                         </td>
                         <td class="expander"></td>
@@ -82,7 +55,7 @@
 
                           <p>Welcome, and thank you for creating an account with {{=COMPANY}}!
 
-                            Please click on the button below to confirm your account. Once confirmed, you will have full access to {{=COMPANY}}.</p>
+                            Please click on the button below to confirm your university email address. Once confirmed, you will have full access to {{=COMPANY}}.</p>
 
                         </td>
                         <td class="expander"></td>
@@ -176,7 +149,7 @@
                       <tr>
                         <td align="center">
                           <center>
-                            <p style="text-align:center;"><a href="#">Terms</a> | <a href="#">Privacy</a></p>
+                            <p style="text-align:center;"><a href="https://campusly.org/terms">Terms</a> | <a href="https://campusly.org/privacy">Privacy</a></p>
                           </center>
                         </td>
                         <td class="expander"></td>
