--- a/client/app/app.css
+++ b/client/app/app.css
@@ -1356,15 +1356,17 @@ New bubble - to fix Safari issues
 
 .new-bubble.remove {
   background: rgb(245,27,87);
+  margin-right: 5px;
 }
 
 .new-bubble.approve {
   background: greenyellow;
-  margin-right: 10px;
+  margin-right: 5px;
 }
 
 .new-bubble.decline {
   background: rgb(245,27,87);
+  margin-right: 5px;
 }
 
 .new-bubble.cancel {
@@ -1654,6 +1656,10 @@ Looking Details
   color: #000000;
   text-align: center;
   font-size: 1.5em;
+}
+
+.not-approved{
+  opacity: 0.5;
 }
 
 .my-profile .profile h2 small{
